# CHANGELOG

## v1.3.2 (next)

Enhancements:

* Add configuration to show or hide timestamp in log output.

  Log output in system that use systemd is too long. This option, default to
  0, will shortened the log output.

## v1.3.1 (2016-10-29)

Fixes:

- Fix duplicate record caused by regression on tree (commit 6da7ea8)
- ResQueue: remove static NEW method

  Using free on NEW method and delete on REMOVE method will trigger invalid
  delete operation when debugging with valgrind.


## v1.3.0 (2016-10-19)

Breaking changes:

For user that use non standard port for rescached, the configuration value
for `server.listen.port` has been merge with `server.listen`. From now on, to
set port for listening, user must add it after the listen address, e.g.
`127.0.0.1:53`.

Fixes:

* Print TTL value when adding new answer type. This will align the `add`
  output with others when debug option is set.
* libvos: Fix SOA record parsing
* Remove duplicate extraction on the answer data
* Fix installation on old linux system with old version of `asciidoc`
* Fix systemd service file installation directory

Enhancements:

* Include generated man page in repository. Since different system can have
  old asciidoc program, building it can be problematic and error.

* Two more hosts sources for ads/malware sites were added,

  * Dan Pollock for 'http://someonewhocares.org/hosts/hosts'
  * Winhelp2002 for 'http://winhelp2002.mvps.org/hosts.txt'

* Blocked hosts now use the IP 127.0.0.2, not 127.0.0.1.

* Install script to update list of ads/malware hosts file.

  User now can run this script manually, to update their hosts file without
  waiting update from rescached package. The script is located in:
  `/usr/bin/rescached-update-hosts-block.sh`.

* Update list of blocked host

* Strip generated binary. The binary size is now around 55k, previously its
  around 70k.

* Support for ARM has been tested on Raspberry PI

* Include AUR script package as submodule

* Remove backup function.
