@@ -125,11 +125,28 @@ file.hosts.block=/etc/rescached/hosts.block
 [LOG]
 
 ##
-## show_timestap:
+## show_timestamp:
 ##	0 - will supress printing timestamp in log.
 ##	1 - will display the timestamp in log.
+##
+## If set to non-zero, each line in log output will added with timestamp
+## format "[YYYY.MM.DD HH:mm:SS] ".
 ##
 ## Format	: number
 ## Default	: 0
 
 #show_timestamp=0
+
+##
+## show_appstamp:
+##	0 - will log without application stamp.
+##	1 - will log with application stamp.
+##
+## If set to non-zero, each line in log output will be added with application
+## stamp "[rescached] ", after timestamp and before actual log string.
+##
+## Format	: number
+## Default	: 0
+##
+
+#show_appstamp=0
